--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="img/apple-touch-icon.png" sizes="180x180">
 <link rel="shortcut icon" href="img/favicon.ico">
-<title>🐵年快乐</title>
+<title>🐵年快乐！发红包，看照片</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="css/jquery.flipcountdown.css" media="screen,print">
