--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" href="img/favicon.ico">
 <title>🐵年快乐！发红包，看照片</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="description" content="风靡一天的“发红包看照片”没玩过瘾？来这里继续看照片！">
 <link rel="stylesheet" type="text/css" href="css/jquery.flipcountdown.css" media="screen,print">
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" media="screen,print">
 <link rel="stylesheet" type="text/css" href="css/standard.css" media="screen,print">
